# skills-sync-manager

./: .gitignore  README.en.md  README.md  README.zh.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/issues/: 2026-06-28-promptdialog-close-issue.md
scripts/: reset-skills-for-remigration.mjs  restore-skills-from-backup.mjs  serve-prototype.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_presets.rs  commands.rs  config_store.rs  credential_store.rs  fs_adapter.rs  gitlab_client.rs  iflytek_skill_hub_client.rs  iflytek_skill_hub_discover.rs  iflytek_skill_hub_endpoints.rs  integration_tests.rs  lib.rs  link_installer.rs  main.rs  main_skills_defaults.rs  models.rs  project_registry.rs  remote_head.rs  repo_cache.rs  runtime_cache.rs  skill_discover.rs  skill_downloader.rs  skill_hub_client.rs  skill_hub_discover.rs  skill_hub_endpoints.rs  skill_hub_upload.rs  skill_install.rs  skill_library.rs  skill_markdown.rs  skill_migration.rs  skill_remover.rs  skill_repos.rs  skill_smart_paste.rs  skill_storage.rs  skill_updates.rs  startup_refresh.rs  storage_keys.rs  target_registry.rs  target_sync.rs  test_support.rs  time_util.rs
src-tauri/src/commands/: mod.rs  skill_hub.rs  updater.rs
src/api/: commands.ts  dialog.ts  skillHub.ts  updater.ts
src/components/: AddTargetDialog.tsx  ConfirmDialog.tsx  Dialog.tsx  MainLibraryPage.tsx  MainLibraryPanel.tsx  ProjectFormDialog.tsx  ProjectTree.tsx  PromptDialog.tsx  Sidebar.tsx  SkillMarkdownView.tsx  SkillPreviewDrawer.tsx  SkillRow.tsx  SyncFromTargetDialog.tsx  TargetDetail.tsx  TargetFormDialog.tsx  TargetList.tsx  TargetRow.tsx  UpdateDialog.tsx  WindowControls.tsx
src/hooks/: useAppBootstrap.ts  useAppDialogs.ts  useAppState.ts  useAppUpdater.ts  useModalFocus.ts  useProjectActions.ts  useSkillHub.ts  (+1 more)
(+102 files in other folders)
