[package]
name = "skills-sync-manager"
version = "0.1.0"
description = "Skills Sync Manager desktop application"
authors = ["Skills Sync Manager Contributors"]
edition = "2021"

[lib]
name = "skills_sync_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
