[package]
name = "skills-sync-manager"
version = "0.7.2"
description = "Skills Sync Manager desktop application"
authors = ["Skills Sync Manager Contributors"]
edition = "2021"

[lib]
name = "skills_sync_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
zip = "2"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
